force-app/main/default/objects/QuoteLineItem/fields/GST_Price__c.field-meta.xml
<CustomField>
    <fullName>GST_Price__c</fullName>
    <formula>IF(  TEXT(Product2.Category__c)  == &apos;Yarn&apos;, ((UnitPrice * Quantity) -((UnitPrice * Quantity) * Discount)) + (((UnitPrice * Quantity) -((UnitPrice * Quantity) * Discount))* 0.12 ), ((UnitPrice * Quantity) -((UnitPrice * Quantity) * Discount)) + (((UnitPrice * Quantity) -((UnitPrice * Quantity) * Discount))* 0.18 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>