force-app/main/default/objects/QuoteLineItem/fields/GST_Price_Hidden__c.field-meta.xml
<CustomField>
    <fullName>GST_Price_Hidden__c</fullName>
    <label>GST Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>