force-app/main/default/objects/QuoteLineItem/fields/Material_Decription__c.field-meta.xml
<CustomField>
    <fullName>Material_Decription__c</fullName>
    <formula>Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Decription</label>
    <type>Text</type>
</CustomField>